# f1extract

./: API.md  Cargo.toml  f1.db  sessions.json  test.jsonStream
src/: db.rs  main.rs
src/event_types/: mod.rs  timing_data.rs
