[package]
name = "f1extract"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = "0.26.0"
reqwest = "0.11.5"
tokio = { version = "1", features = ["full"] }